objects/LLC_BI__Deposit__c.object
<CustomObject>
    <description>The Deposit Object is used to track details of a deposit within nCino</description>
    <fields>
        <fullName>CF_Employee_Deposit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected. This checkbox is used to specify when a Deposit belongs to an employee of the financial institution. The employee has entity involvement on this loan.</description>
        <label>Employee Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JHJX__ACHCompDiscrData__c</fullName>
        <description>The Users populate this optional text field to capture company discretionary data. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Discretionary</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__ACHCompEntryDesc__c</fullName>
        <description>The Users populate this optional text field to capture company entry description. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Entry Desc</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__ACHCompId__c</fullName>
        <description>The Users populate this optional text field to capture company ID. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Company ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__ACHCompName__c</fullName>
        <description>The Users populate this optional text field with the ACH Company Name. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Name</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__ACHCrAcctId__c</fullName>
        <description>The Users populate this optional text field with the account ID of the credit account for the ACH item. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Account Number</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__ACHCrName__c</fullName>
        <description>The Users populate this optional text field with the account hoolders name of the credit account for the ACH item. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Individual Name</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__ACHCrRtNum__c</fullName>
        <description>The Users populate this optional text field with routing number of the credit account&apos;s bank for the ACH item. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Bank Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__ACHSendPreNoteCode__c</fullName>
        <description>The Users populate this optional text field that determines if an ACH prenotification should be generated. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Send Prenotice</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__ACHStdEntryClass__c</fullName>
        <description>The Users populate this optional text field with the ACH standard entry class. By default, it is blank.</description>
        <label>Standard Entry Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ARC</fullName>
                    <label>Accounts Receivable Entry</label>
                </value>
                <value>
                    <fullName>COR</fullName>
                    <label>Automated Notification of Change</label>
                </value>
                <value>
                    <fullName>CCD</fullName>
                    <label>Cash Concentration and Disbursement</label>
                </value>
                <value>
                    <fullName>CTX</fullName>
                    <label>Corporate Trade Exchange</label>
                </value>
                <value>
                    <fullName>CBR</fullName>
                    <label>Cross Border Entry</label>
                </value>
                <value>
                    <fullName>CIE</fullName>
                    <label>Customer Initiated Entry</label>
                </value>
                <value>
                    <fullName>WEB</fullName>
                    <label>Internet-Initiated Entry</label>
                </value>
                <value>
                    <fullName>MTE</fullName>
                    <label>Machine Transfer Entry</label>
                </value>
                <value>
                    <fullName>POP</fullName>
                    <label>Point-of-Purchase Entry</label>
                </value>
                <value>
                    <fullName>POS</fullName>
                    <label>Point-of-Sale Entry</label>
                </value>
                <value>
                    <fullName>PPD</fullName>
                    <label>Prearranged Payment and Deposit</label>
                </value>
                <value>
                    <fullName>RCK</fullName>
                    <label>Re-presented Check Entry</label>
                </value>
                <value>
                    <fullName>TEL</fullName>
                    <label>Telephone-Initiated Entry</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__ACHTrnCode__c</fullName>
        <description>The Users populate this optional text field with the transaction code to be used for the ACH item. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Tran Code</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__AcctClsfCode__c</fullName>
        <description>The Users populate this optional picklist field to define account classification. By default, it is blank.</description>
        <label>Class Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <label>A - Association/Organization</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>B - Business</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>C - Corporation</label>
                </value>
                <value>
                    <fullName>D</fullName>
                    <label>D - Deposit Institution</label>
                </value>
                <value>
                    <fullName>E</fullName>
                    <label>E - Estate</label>
                </value>
                <value>
                    <fullName>F</fullName>
                    <label>F - Fiduciary Organization</label>
                </value>
                <value>
                    <fullName>G</fullName>
                    <label>G - Conserv/Guard</label>
                </value>
                <value>
                    <fullName>I</fullName>
                    <label>I - Individual/Entity</label>
                </value>
                <value>
                    <fullName>K</fullName>
                    <label>K - Landlord</label>
                </value>
                <value>
                    <fullName>L</fullName>
                    <label>L - Limited Liability Corporation</label>
                </value>
                <value>
                    <fullName>M</fullName>
                    <label>M - Partnership</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>N - Non Profit</label>
                </value>
                <value>
                    <fullName>O</fullName>
                    <label>O - IOLTA</label>
                </value>
                <value>
                    <fullName>P</fullName>
                    <label>P - Personal</label>
                </value>
                <value>
                    <fullName>Q</fullName>
                    <label>Q - Fed Fiduciary</label>
                </value>
                <value>
                    <fullName>R</fullName>
                    <label>R - Rep Payee</label>
                </value>
                <value>
                    <fullName>S</fullName>
                    <label>S - Sole Proprietor</label>
                </value>
                <value>
                    <fullName>T</fullName>
                    <label>T - Irrevocable Trust</label>
                </value>
                <value>
                    <fullName>U</fullName>
                    <label>U - TNUTMA</label>
                </value>
                <value>
                    <fullName>V</fullName>
                    <label>V - Revocable Trust</label>
                </value>
                <value>
                    <fullName>X</fullName>
                    <label>X - Power of Attorney</label>
                </value>
                <value>
                    <fullName>Z</fullName>
                    <label>Z - Public Funds</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__Additional_Name_1__c</fullName>
        <description>The User populates this optional text field to capture any special titling for an account. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Name #1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__Additional_Name_2__c</fullName>
        <description>The User populates this optional text field to capture any special titling for an account. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Name #2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__Club_Transfer_Account_Number__c</fullName>
        <description>The User populates this optional text field to capture the Account Number of the account that the Club funds will be transferred to. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Club Transfer Account Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__Club_Transfer_Account_Type__c</fullName>
        <description>The User populates this optional picklist field to capture the Account Type of the account that the Club funds will be transferred to. By default, it is blank.</description>
        <label>Club Transfer Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>D</fullName>
                    <label>Checking</label>
                </value>
                <value>
                    <fullName>S</fullName>
                    <label>Savings</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__IntDispAcctId__c</fullName>
        <description>The Users populate this optional text field with the account ID in which to deposit interest disbursements. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Interest Disbursement Account ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__IntDispAcctType__c</fullName>
        <description>The Users populate this optional picklist field to define interest disbursement account types. By default, it is blank.</description>
        <label>Interest Disbursement Account Types</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>D</fullName>
                    <label>Checking</label>
                </value>
                <value>
                    <fullName>S</fullName>
                    <label>Savings</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__IntDisp__c</fullName>
        <description>The Users populate this optional picklist field to define the the disposition of interest. By default, it is blank.</description>
        <label>Disposition of Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AddBackToAcct</fullName>
                    <label>Add Back To Account</label>
                </value>
                <value>
                    <fullName>DepToAcct</fullName>
                    <label>Deposit To Account</label>
                </value>
                <value>
                    <fullName>PayByACH</fullName>
                    <label>Pay By ACH</label>
                </value>
                <value>
                    <fullName>PayByChk</fullName>
                    <label>Pay By Check</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__OffCode__c</fullName>
        <description>The Users populate this optional field to define the Officer Code.  By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Officer Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__PlnCvrgType__c</fullName>
        <description>The Users populate this optional picklist field to define HSA Account Type. By default, it is blank.</description>
        <label>HSA Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fam</fullName>
                    <label>Family</label>
                </value>
                <value>
                    <fullName>Indv</fullName>
                    <label>Individual</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__RsStat__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pass/Fail Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__SalesPerson__c</fullName>
        <description>The Users populate this optional picklist field that represents the sales person. By default, it is blank.</description>
        <label>Sales Person</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>JHJX__SalesPerson</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__TrnRcptId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Transaction ID</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__isRenewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__APY__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the Annual Percentage Yield.</description>
        <inlineHelpText>Annual Percentage Yield</inlineHelpText>
        <label>APY</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account_Number__c</fullName>
        <description>This field is required. It is populated manually by the user or automatically depending on the financial institution&apos;s integration. It represents the account number of a deposit account.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account_To_Receive_Accrued_Interest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Administrators populate this lookup field with the Account that receives the accrued interest from a time-based Deposit Account.</description>
        <inlineHelpText>Enter the Account that receives the accrued interest.</inlineHelpText>
        <label>Account to Receive Accrued Interest</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Accrued Interest Deposit Accounts</relationshipLabel>
        <relationshipName>Accrued_Interest_Deposit_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is automatically set when creating a deposit in the New Deposit Workflow. This field is a lookup to the relationship associated with the deposit.</description>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Additional_Terms__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies additional terms to be added to the safe deposit box lease.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Additional terms to be added to the safe deposit box lease.</inlineHelpText>
        <label>Additional Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Alternate_Signature_Description__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is a description of the alternate text to print under a signature line for the responsible party on a CESA. This is used if something other than the responsible party&apos;s name should be printed under their signature line.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A description of the alternate text to print under a signature line for the responsible party on a CESA. This would be used if something other than the responsible party&apos;s name should print under their signature line.</inlineHelpText>
        <label>Alternate Signature Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. This currency field is used to specify the amount of the deposit.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Annual_Percentage_Yield__c</fullName>
        <description>The APY (Annual Percentage Yield %) on a deposit account.</description>
        <label>Annual Percentage Yield</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Annual_Rent_Amount__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the amount of the initial annual rent for the safe deposit box.</description>
        <inlineHelpText>The amount of the initial annual rent for the safe deposit box.</inlineHelpText>
        <label>Annual Rent Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Application__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is optional and can be collected as part of a workflow. This field is used to specify (via lookup) the application record associated to the deposit and relationship the deposit is linked to.</description>
        <label>Application</label>
        <referenceTo>LLC_BI__Application__c</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Appointee_Capacity_Description__c</fullName>
        <description>Fiduciary or Estate Appointed Party Capacity</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Capacity of a designated appointee, often by court order/will. Acts for a fiduciary or estate account ward. Capacity identified by court order/legal document as guardian, conservator, or legal representative. Captured once and applied to appointee(s).</inlineHelpText>
        <label>Appointee Capacity Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Average_Deposit_Account_Balance__c</fullName>
        <description>Average daily balance of the deposit account over the course of a month.</description>
        <label>Average Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Billing_Frequency_Other__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It describes the frequency with which the safe deposit box rent amount is debited from the account.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describes the frequency with which the safe deposit box rent amount will be debited from the account.</inlineHelpText>
        <label>Billing Frequency Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Billing_Frequency__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies how often billing for the safe deposit box will occur.</description>
        <inlineHelpText>Specifies how often billing for the safe deposit box will occur.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semiannually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Biannually</fullName>
                </value>
                <value>
                    <fullName>Monthly on the lease date anniversary</fullName>
                </value>
                <value>
                    <fullName>Yearly on the lease date anniversary</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Billing_Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It describes how the billing for the safe deposit box is communicated to the lessee.</description>
        <inlineHelpText>Describes how the billing for the safe deposit box will be communicated to the lessee.</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Give Notice</fullName>
                </value>
                <value>
                    <fullName>Debit Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__CD_Term__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It represents the length of time from the opening date of the time deposit to the maturity date (for example, 91 days and 18 months).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The length of time from the opening date of the time deposit to the maturity date (e.g. 91 days 18 months).</inlineHelpText>
        <label>CD Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CESA_Responsible_Individual_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. If true, the designated beneficiary of a CESA becomes the responsible individual at age of maturity.</description>
        <inlineHelpText>If true the Designated Beneficiary of a CESA will become the Responsible Individual at age of majority.</inlineHelpText>
        <label>CESA Responsible Individual Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Certificate_Number__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It represents the number of the certificate of deposit (CD). This is used when a CD has an account number and a certificate number.</description>
        <inlineHelpText>The number of the Certificate of Deposit. This is used when a certificate of deposit has an account number and a certificate number.</inlineHelpText>
        <label>Certificate Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Change_Designated_Beneficiary_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. If true, the responsible party on the CESA may change the designated beneficiary.</description>
        <inlineHelpText>If true the Responsible Party on the CESA may change the Designated Beneficiary.</inlineHelpText>
        <label>Change Designated Beneficiary Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Compounding_Frequency__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies an institution&apos;s general policy regarding how often accrued earnings are added to the principal balance of an account for the purpose of computing additional earnings.</description>
        <inlineHelpText>Specifies an institution&apos;s general policy regarding how often accrued earnings are added to the principal balance of an account for the purpose of computing additional earnings.</inlineHelpText>
        <label>Compounding Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Every Other Week</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semiannually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Continuous</fullName>
                </value>
                <value>
                    <fullName>No compounding/Simple</fullName>
                </value>
                <value>
                    <fullName>Semimonthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is automatically set when creating a deposit in the New Deposit Workflow. This field is a lookup to the contact associated with the deposit.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Death_Before_Required_Beginning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. If true the deceased IRA owner&apos;s death occurred before his/her required beginning date (RBD).</description>
        <inlineHelpText>If true the deceased IRA owner&apos;s death occurred before his/her required beginning date (RBD).</inlineHelpText>
        <label>Death Before Required Beginning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Default_App__c</fullName>
        <description>The system populates this text field to display Deposit pages on a Deposit record through a workflow.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The system populates this text field through a workflow.</inlineHelpText>
        <label>Default App</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit_Account_Type__c</fullName>
        <description>Populate this picklist field to indicate the deposit account type. If creating new accounts via a core integration, this field is automatically populated. Otherwise, the field is manually populated during the deposit account opening workflow.</description>
        <label>Deposit Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Money Market Savings</fullName>
                </value>
                <value>
                    <fullName>Money Market Checking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit_Rate_Structure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This optional lookup field references the deposit rate structure for this deposit.</description>
        <label>Deposit Rate Structure</label>
        <referenceTo>LLC_BI__Deposit_Rate_Structure__c</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Description_of_Keys__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is a description of any safe deposit box keys that have been issued.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A description of any safe deposit box keys that have been issued.</inlineHelpText>
        <label>Description of Keys</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Distribution_Payment_Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies the manner in which the distribution should be made. (The &apos;periodic RMD as calculated&apos; option should only be selected for plans and circumstances where the required minimum distribution calculation applies, subject to financial institution policy.)</description>
        <inlineHelpText>Specifies the manner in which the distribution should be made.</inlineHelpText>
        <label>Distribution Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediate</fullName>
                </value>
                <value>
                    <fullName>Periodic</fullName>
                </value>
                <value>
                    <fullName>Total</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Periodic RMD as calculated (Traditional or SIMPLE only)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Distribution_Start_Date__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the starting date for the periodic distributions.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The starting date for the periodic distributions.</inlineHelpText>
        <label>Distribution Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Durable_Agency__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. A durable agency grants a continuing power of attorney after legal incapacitation of an individual which terminiates only upon the individual&apos;s death.</description>
        <inlineHelpText>The authority granted to the deputy/agent on the safe deposit box lease is a durable power continuing after legal incapacity and terminating only at death of the appointing renter.</inlineHelpText>
        <label>Durable Agency</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>